# azero.gg

./: Cargo.toml  README.md  Readme-vecchio2.md  Readme.md
frontend/: next.config.js  package-lock.json  package.json
frontend/src/components/: NoSSR.tsx  WalletButton.tsx  WithParticles.tsx
frontend/src/pages/: _app.tsx  _document.tsx  index.tsx
src/: lib.rs  main.rs  state.rs  webserver.rs
src/discord/: mod.rs  utils.rs
src/discord/commands/: ao.rs  config.rs  constants.rs  mod.rs
src/webserver/: ecdsa_verify.rs  mod.rs  routes.rs
