[package]
name = "azero-gg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "azerogg"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.73"
dotenv = "0.15.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.20"
reqwest = "0.11.20"
serde = "1.0.188"
serenity = {version="0.11.6", default-features=false, features=["client", "gateway", "rustls_backend", "model"]}
thiserror = "1.0.47"
warp = "0.3.5"
tokio = {version="1.32.0", features = ["full"]}
uuid = { version = "1.4.1", features = ["serde","v4"] } 
subxt = { version = "0.31.0", features = ["native"] }
subxt-signer = { version = "0.31.0", features = ["subxt"]}
sp-runtime = "25.0.0"
anyhow = "1.0.75"
# substrate-api-client = { git = "https://github.com/scs/substrate-api-client", branch="master", features = ["jsonrpsee-client"]} 
